k8s/ingress/nginx-service.yaml
apiVersion: v1 # EKS VERSION NOW
kind: Service
metadata:
  name: nginx-loadbalancer
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: nginx-loadbalancer
  ports:
    - port: 80
      targetPort: 80
